# server/api/controllers/consumeraccount/consumeraccount.router.js
@@ -3,5 +3,4 @@ import consumerAccountController from './consumeraccount.controller';
 
 export default express
     .Router()
-    .get('/', consumerAccountController.all)
     .get('/:consumerId', consumerAccountController.byId)
